--- a/application/pet-feeder-app/src/app/home/home.page.html
+++ b/application/pet-feeder-app/src/app/home/home.page.html
@@ -1,13 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>home</ion-title>
+    <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  {{apiurl}}
-  <button (click)="makeRequest()">Request</button>
-  <h3 *ngFor="let user of users">
-    {{ user.name }}
-  </h3>
+  <div class="welcome">Welcome to Pet Feeder!</div>
 </ion-content>
